argocd/applications/findbobastore/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: findbobastore
  namespace: findbobastore
spec:
  selector:
    matchLabels:
      app: findbobastore
  template:
    metadata:
      labels:
        app: findbobastore
    spec:
      imagePullSecrets:
        - name: kalmyk-registry
      containers:
        - name: findbobastore
          image: kalmyk.duckdns.org/lab/findbobastore
          resources:
            limits:
              cpu: '1'
              memory: '512Mi'
            requests:
              cpu: '200m'
              memory: '256Mi'
          ports:
            - containerPort: 3000
