argocd/applications/findbobastore/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: findbobastore
  namespace: findbobastore
spec:
  selector:
    app: findbobastore
  ports:
    - port: 80
      targetPort: 3000
