argocd/applications/findbobastore/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: findbobastore
  namespace: findbobastore
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`findboba.store`)
      services:
        - name: findbobastore
          port: 80
  tls:
    certResolver: default
